<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords" />

            <!-- Book Price field -->
            <EditText
                android:id="@+id/edit_book_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_price"
                android:inputType="textCapWords" />
            <!-- Book Price field -->
            <EditText
                android:id="@+id/price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_price"
                android:inputType="textCapWords" />

            <!-- Book Quantity field -->
            <EditText
                android:id="@+id/edit_book_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_quantity"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier Name category -->
    <LinearLayout
        android:id="@+id/supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />


        <!-- Supplier field -->
        <EditText
            android:id="@+id/edit_supplier"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_supplier"
            android:inputType="textNoSuggestions" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

        </RelativeLayout>

    </LinearLayout>
    <!-- Supplier Phone category -->
    <LinearLayout
        android:id="@+id/edit_supplier_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <!-- Label -->

        <ImageButton
            android:id="@+id/imagePhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoLink="phone"
            app:srcCompat="@drawable/phone" />

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_phone" />


        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Phone field -->
            <EditText
                android:id="@+id/edit_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_phone_number"
                android:inputType="textNoSuggestions" />

        </RelativeLayout>
    </LinearLayout>

    <!-- Add & Subtract inventory category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <!--<Button-->
            <!--android:layout_width="12dp"-->
            <!--android:layout_height="48dp"-->
            <!--android:layout_weight="0.40"-->
            <!--android:onClick="decrement"-->
            <!--android:text="-" />-->


        <ImageButton
            android:id="@+id/decrement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:onClick="decrement"
        app:srcCompat="@drawable/ic_minus" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="0"
            android:textColor="@android:color/holo_purple"
            android:textSize="26sp" />

        <ImageButton
            android:id="@+id/increment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
        android:onClick="increment"
        app:srcCompat="@drawable/ic_add" />



        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="48dp"-->
            <!--android:layout_weight="0.52"-->
            <!--android:onClick="increment"-->
            <!--android:text="+" />-->





    </LinearLayout>






</LinearLayout>
